docs/2.9.4/notification/v1/receiver.md
---
permalink: /2.9.4/notification/v1/receiver/
---

# notification.v1.receiver

"Receiver is the Schema for the receivers API."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withEvents(events)`](#fn-specwithevents)
  * [`fn withEventsMixin(events)`](#fn-specwitheventsmixin)
  * [`fn withInterval(interval)`](#fn-specwithinterval)
  * [`fn withOidcProviders(oidcProviders)`](#fn-specwithoidcproviders)
  * [`fn withOidcProvidersMixin(oidcProviders)`](#fn-specwithoidcprovidersmixin)
  * [`fn withResourceFilter(resourceFilter)`](#fn-specwithresourcefilter)
  * [`fn withResources(resources)`](#fn-specwithresources)
  * [`fn withResourcesMixin(resources)`](#fn-specwithresourcesmixin)
  * [`fn withSuspend(suspend)`](#fn-specwithsuspend)
  * [`fn withType(type)`](#fn-specwithtype)
  * [`obj spec.oidcProviders`](#obj-specoidcproviders)
    * [`fn withAudience(audience)`](#fn-specoidcproviderswithaudience)
    * [`fn withIssuerURL(issuerURL)`](#fn-specoidcproviderswithissuerurl)
    * [`fn withValidations(validations)`](#fn-specoidcproviderswithvalidations)
    * [`fn withValidationsMixin(validations)`](#fn-specoidcproviderswithvalidationsmixin)
    * [`fn withVariables(variables)`](#fn-specoidcproviderswithvariables)
    * [`fn withVariablesMixin(variables)`](#fn-specoidcproviderswithvariablesmixin)
    * [`obj spec.oidcProviders.validations`](#obj-specoidcprovidersvalidations)
      * [`fn withExpression(expression)`](#fn-specoidcprovidersvalidationswithexpression)
      * [`fn withMessage(message)`](#fn-specoidcprovidersvalidationswithmessage)
    * [`obj spec.oidcProviders.variables`](#obj-specoidcprovidersvariables)
      * [`fn withExpression(expression)`](#fn-specoidcprovidersvariableswithexpression)
      * [`fn withName(name)`](#fn-specoidcprovidersvariableswithname)
  * [`obj spec.resources`](#obj-specresources)
    * [`fn withApiVersion(apiVersion)`](#fn-specresourceswithapiversion)
    * [`fn withFilter(filter)`](#fn-specresourceswithfilter)
    * [`fn withKind(kind)`](#fn-specresourceswithkind)
    * [`fn withMatchLabels(matchLabels)`](#fn-specresourceswithmatchlabels)
    * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specresourceswithmatchlabelsmixin)
    * [`fn withName(name)`](#fn-specresourceswithname)
    * [`fn withNamespace(namespace)`](#fn-specresourceswithnamespace)
  * [`obj spec.secretRef`](#obj-specsecretref)
    * [`fn withName(name)`](#fn-specsecretrefwithname)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Receiver

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ReceiverSpec defines the desired state of the Receiver."

### fn spec.withEvents

```ts
withEvents(events)
```

"Events specifies the list of event types to handle,\ne.g. 'push' for GitHub or 'Push Hook' for GitLab."

### fn spec.withEventsMixin

```ts
withEventsMixin(events)
```

"Events specifies the list of event types to handle,\ne.g. 'push' for GitHub or 'Push Hook' for GitLab."

**Note:** This function appends passed data to existing values

### fn spec.withInterval

```ts
withInterval(interval)
```

"Interval at which to reconcile the Receiver with its Secret references."

### fn spec.withOidcProviders

```ts
withOidcProviders(oidcProviders)
```

"OIDCProviders specifies the OIDC providers used to authenticate incoming\nrequests when Type is 'generic-oidc'. The provider whose IssuerURL matches\nthe token's 'iss' claim is used to verify the token signature, expiration\nand audience, and to evaluate the configured CEL validations against the\ntoken claims."

### fn spec.withOidcProvidersMixin

```ts
withOidcProvidersMixin(oidcProviders)
```

"OIDCProviders specifies the OIDC providers used to authenticate incoming\nrequests when Type is 'generic-oidc'. The provider whose IssuerURL matches\nthe token's 'iss' claim is used to verify the token signature, expiration\nand audience, and to evaluate the configured CEL validations against the\ntoken claims."

**Note:** This function appends passed data to existing values

### fn spec.withResourceFilter

```ts
withResourceFilter(resourceFilter)
```

"ResourceFilter is a CEL expression expected to return a boolean that is\nevaluated for each resource referenced in the Resources field when a\nwebhook is received. If the expression returns false then the controller\nwill not request a reconciliation for the resource.\nThe expression can read the resource metadata via 'res' and the webhook\nrequest body via 'req'. For generic-oidc receivers, the verified OIDC\ntoken claims are also available via 'claims'.\nWhen the expression is specified the controller will parse it and mark\nthe object as terminally failed if the expression is invalid or does not\nreturn a boolean."

### fn spec.withResources

```ts
withResources(resources)
```

"A list of resources to be notified about changes."

### fn spec.withResourcesMixin

```ts
withResourcesMixin(resources)
```

"A list of resources to be notified about changes."

**Note:** This function appends passed data to existing values

### fn spec.withSuspend

```ts
withSuspend(suspend)
```

"Suspend tells the controller to suspend subsequent\nevents handling for this receiver."

### fn spec.withType

```ts
withType(type)
```

"Type of webhook sender, used to determine\nthe validation procedure and payload deserialization."

## obj spec.oidcProviders

"OIDCProviders specifies the OIDC providers used to authenticate incoming\nrequests when Type is 'generic-oidc'. The provider whose IssuerURL matches\nthe token's 'iss' claim is used to verify the token signature, expiration\nand audience, and to evaluate the configured CEL validations against the\ntoken claims."

### fn spec.oidcProviders.withAudience

```ts
withAudience(audience)
```

"Audience is the expected audience ('aud' claim) for tokens issued by\nthis provider. Defaults to 'notification-controller'."

### fn spec.oidcProviders.withIssuerURL

```ts
withIssuerURL(issuerURL)
```

"IssuerURL is the OIDC issuer URL used for provider discovery. It must\nmatch the 'iss' claim of tokens issued by this provider."

### fn spec.oidcProviders.withValidations

```ts
withValidations(validations)
```

"Validations is the list of CEL boolean expressions evaluated against the\ntoken claims and the variables. The request is accepted only if all of\nthem evaluate to true; the message of each failing expression is returned\nto the caller.\n\nAt least one validation is required. A valid signature alone does not\nauthorize a request: public issuers issue tokens to any caller on the\nplatform, so the validations must constrain the caller's identity claims\n(e.g. 'repository_owner' for GitHub Actions)."

### fn spec.oidcProviders.withValidationsMixin

```ts
withValidationsMixin(validations)
```

"Validations is the list of CEL boolean expressions evaluated against the\ntoken claims and the variables. The request is accepted only if all of\nthem evaluate to true; the message of each failing expression is returned\nto the caller.\n\nAt least one validation is required. A valid signature alone does not\nauthorize a request: public issuers issue tokens to any caller on the\nplatform, so the validations must constrain the caller's identity claims\n(e.g. 'repository_owner' for GitHub Actions)."

**Note:** This function appends passed data to existing values

### fn spec.oidcProviders.withVariables

```ts
withVariables(variables)
```

"Variables is an optional list of named CEL expressions, evaluated in order\nand exposed as 'vars.<name>'. Each expression can read the token claims\nvia 'claims' and any variable defined before it. Use it to share\nsub-expressions across validations."

### fn spec.oidcProviders.withVariablesMixin

```ts
withVariablesMixin(variables)
```

"Variables is an optional list of named CEL expressions, evaluated in order\nand exposed as 'vars.<name>'. Each expression can read the token claims\nvia 'claims' and any variable defined before it. Use it to share\nsub-expressions across validations."

**Note:** This function appends passed data to existing values

## obj spec.oidcProviders.validations

"Validations is the list of CEL boolean expressions evaluated against the\ntoken claims and the variables. The request is accepted only if all of\nthem evaluate to true; the message of each failing expression is returned\nto the caller.\n\nAt least one validation is required. A valid signature alone does not\nauthorize a request: public issuers issue tokens to any caller on the\nplatform, so the validations must constrain the caller's identity claims\n(e.g. 'repository_owner' for GitHub Actions)."

### fn spec.oidcProviders.validations.withExpression

```ts
withExpression(expression)
```

"Expression is the CEL boolean expression to evaluate."

### fn spec.oidcProviders.validations.withMessage

```ts
withMessage(message)
```

"Message is returned to the caller when the expression evaluates to false."

## obj spec.oidcProviders.variables

"Variables is an optional list of named CEL expressions, evaluated in order\nand exposed as 'vars.<name>'. Each expression can read the token claims\nvia 'claims' and any variable defined before it. Use it to share\nsub-expressions across validations."

### fn spec.oidcProviders.variables.withExpression

```ts
withExpression(expression)
```

"Expression is the CEL expression that defines the variable value."

### fn spec.oidcProviders.variables.withName

```ts
withName(name)
```

"Name is the variable name; it must be a valid CEL identifier."

## obj spec.resources

"A list of resources to be notified about changes."

### fn spec.resources.withApiVersion

```ts
withApiVersion(apiVersion)
```

"API version of the referent"

### fn spec.resources.withFilter

```ts
withFilter(filter)
```

"Filter is a CEL expression expected to return a boolean that is evaluated\nfor each resource matched by this reference when a webhook is received,\nin addition to the top-level resourceFilter. A reconciliation is requested\nonly when both expressions (when set) return true.\nThe expression can read the resource metadata via 'res' and the webhook\nrequest body via 'req'. For generic-oidc receivers, the verified OIDC\ntoken claims are also available via 'claims'.\nWhen the expression is specified the controller will parse it and mark\nthe object as terminally failed if the expression is invalid or does not\nreturn a boolean."

### fn spec.resources.withKind

```ts
withKind(kind)
```

"Kind of the referent"

### fn spec.resources.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels\nmap is equivalent to an element of matchExpressions, whose key field is \"key\", the\noperator is \"In\", and the values array contains only \"value\". The requirements are ANDed.\nMatchLabels requires the name to be set to `*`."

### fn spec.resources.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels\nmap is equivalent to an element of matchExpressions, whose key field is \"key\", the\noperator is \"In\", and the values array contains only \"value\". The requirements are ANDed.\nMatchLabels requires the name to be set to `*`."

**Note:** This function appends passed data to existing values

### fn spec.resources.withName

```ts
withName(name)
```

"Name of the referent\nIf multiple resources are targeted `*` may be set."

### fn spec.resources.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent"

## obj spec.secretRef

"SecretRef specifies the Secret containing the token used\nto validate the payload authenticity. The Secret must contain a 'token'\nkey. For GCR receivers, the Secret must also contain an 'email' key\nwith the IAM service account email configured on the Pub/Sub push\nsubscription, and an 'audience' key with the expected OIDC token audience.\n\nRequired for all receiver types except 'generic-oidc', which authenticates\nrequests using the OIDC token instead and must not set this field."

### fn spec.secretRef.withName

```ts
withName(name)
```

"Name of the referent."